--- a/3_Python/Excel_csv_sql.ipynb
+++ b/3_Python/Excel_csv_sql.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 19,
    "id": "718d4361",
    "metadata": {},
    "outputs": [
@@ -29,22 +29,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Converted 'Appointment.xlsx' - Sheet 'Sheet1' to 'Appointment.csv'\n",
-      "Converted 'Beds.xlsx' - Sheet 'Sheet1' to 'Beds.csv'\n",
-      "Converted 'Department.xlsx' - Sheet 'Sheet1' to 'Department.csv'\n",
-      "Converted 'Doctor.xlsx' - Sheet 'Sheet1' to 'Doctor.csv'\n",
-      "Converted 'Hospital Bills.xlsx' - Sheet 'Sheet1' to 'Hospital Bills.csv'\n",
-      "Converted 'Medical Stock.xlsx' - Sheet 'Sheet1' to 'Medical Stock.csv'\n",
-      "Converted 'Medical Tests.xlsx' - Sheet 'Sheet1' to 'Medical Tests.csv'\n",
-      "Converted 'medicine_patient.xlsx' - Sheet 'Sheet1' to 'medicine_patient.csv'\n",
-      "Converted 'medicine_patient.xlsx' - Sheet 'Sheet2' to 'medicine_patient.csv'\n",
-      "Converted 'patient.xlsx' - Sheet 'Sheet1' to 'patient.csv'\n",
-      "Converted 'Patient_Tests.xlsx' - Sheet 'Sheet1' to 'Patient_Tests.csv'\n",
-      "Converted 'Rooms.xlsx' - Sheet 'Sheet1' to 'Rooms.csv'\n",
-      "Converted 'Satisfaction Score.xlsx' - Sheet 'Sheet1' to 'Satisfaction Score.csv'\n",
-      "Converted 'Staff.xlsx' - Sheet 'Sheet1' to 'Staff.csv'\n",
-      "Converted 'Supplier.xlsx' - Sheet 'Sheet1' to 'Supplier.csv'\n",
-      "Converted 'Surgery.xlsx' - Sheet 'Sheet1' to 'Surgery.csv'\n"
+      "Converted 'Appointment.xlsx' - Sheet 'Sheet1' to 'Appointment.csv' with 35 records\n",
+      "Converted 'Beds.xlsx' - Sheet 'Sheet1' to 'Beds.csv' with 25 records\n",
+      "Converted 'Department.xlsx' - Sheet 'Sheet1' to 'Department.csv' with 15 records\n",
+      "Converted 'Doctor.xlsx' - Sheet 'Sheet1' to 'Doctor.csv' with 15 records\n",
+      "Converted 'Hospital_Bills.xlsx' - Sheet 'Sheet1' to 'Hospital_Bills.csv' with 30 records\n",
+      "Converted 'Medical_Stock.xlsx' - Sheet 'Sheet1' to 'Medical_Stock.csv' with 15 records\n",
+      "Converted 'Medical_Tests.xlsx' - Sheet 'Sheet1' to 'Medical_Tests.csv' with 15 records\n",
+      "Converted 'medicine_patient.xlsx' - Sheet 'Sheet1' to 'medicine_patient.csv' with 517 records\n",
+      "Converted 'patient.xlsx' - Sheet 'Sheet1' to 'patient.csv' with 30 records\n",
+      "Converted 'Patient_Tests.xlsx' - Sheet 'Sheet1' to 'Patient_Tests.csv' with 30 records\n",
+      "Converted 'Rooms.xlsx' - Sheet 'Sheet1' to 'Rooms.csv' with 25 records\n",
+      "Converted 'Satisfaction_Score.xlsx' - Sheet 'Sheet1' to 'Satisfaction_Score.csv' with 19 records\n",
+      "Converted 'Staff.xlsx' - Sheet 'Sheet1' to 'Staff.csv' with 20 records\n",
+      "Converted 'Supplier.xlsx' - Sheet 'Sheet1' to 'Supplier.csv' with 5 records\n",
+      "Converted 'Surgery.xlsx' - Sheet 'Sheet1' to 'Surgery.csv' with 30 records\n"
      ]
     }
    ],
@@ -65,7 +64,10 @@
     "    for sheet, data in df.items():\n",
     "        csv_file = destination_folder / f\"{file.stem}.csv\"  # Include sheet name for uniqueness\n",
     "        data.to_csv(csv_file, index=False)\n",
-    "        print(f\"Converted '{file.name}' - Sheet '{sheet}' to '{csv_file.name}'\")"
+    "        row_count = len(data)\n",
+    "        print(f\"Converted '{file.name}' - Sheet '{sheet}' to '{csv_file.name}' with {row_count} records\")\n",
+    "    \n",
+    "     "
    ]
   }
  ],
